# risk-landscaper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml  run_all_policies.py
batteries/: frontier.yaml  standard.yaml
docs/: design.md  multi-document-ingest.md  work-tracker.md
docs/superpowers/plans/: 2026-04-21-causal-chain-population.md  2026-04-22-compare-command.md  2026-04-22-jsonld-serialization.md  2026-04-22-multi-document-ingest.md  2026-04-22-stakeholder-trustworthy-interests.md  2026-04-22-trustworthy-characteristics.md
docs/superpowers/specs/: 2026-04-21-causal-chain-population-design.md  2026-04-22-compare-command-design.md  2026-04-22-jsonld-serialization-design.md
policy_examples/: aramco.json  aramco.md  atlas-telecom.md  commonwealth-insurance.md  dhs-gov.md  generic.json  generic.md  healthcare.json  healthcare.md  law.md  magic-arp-v1.0.md  meridian-bank.md  nexus-healthcare.json  rdash-nhs.md  swb.json  swb.md
policy_examples/frontier_safety/: naver-asf.md
src/risk_landscaper/: cli.py  compare.py  debug.py  llm.py  merge.py  models.py  nexus.py  nexus_adapter.py  prompts.py  reports.py  serialize.py  vair.py
src/risk_landscaper/stages/: assess.py  build_landscape.py  detect_domain.py  enrich_chains.py  ingest.py  map_risks.py
src/risk_landscaper/templates/: ai_card_template.html  comparison_report_template.html  ingest_cot.json  (+3 more)
tests/: conftest.py  test_assess.py  test_build_landscape.py  test_cli.py  test_compare.py  test_detect_domain.py  test_enrich_chains.py  test_ingest.py  test_map_risks.py  test_merge.py  test_models.py  test_nexus_adapter.py  test_policy_battery.py  test_serialize.py  test_vair.py
(+12 files in other folders)
