[project]
name = "risk-landscaper"
version = "0.2.0"
description = "Policy-driven risk landscape generation using AI Atlas Nexus"
requires-python = ">=3.11"
dependencies = [
    "instructor>=1.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "chromadb>=0.5",
    "ai-atlas-nexus @ git+https://github.com/IBM/ai-atlas-nexus.git@main",
]

[project.scripts]
risk-landscaper = "risk_landscaper.cli:app"

[project.optional-dependencies]
docs = ["markitdown[pdf,docx]>=0.1.1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_landscaper"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.0"]

